# flappy-neat

./: .gitignore  Cargo.toml  config.json  rules.json
src/: main.rs
src/model/: mod.rs
src/renderer/: mod.rs
