[package]
name = "flappy-neat"
version = "0.1.0"
authors = ["Kudasov Alexander <sasha.kudasov04@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neat = { git = "https://github.com/Nertsal/neat" }
geng = "0.12.0"
serde = "1.0.116"
